push to develop on pi

--- a/phase4/templates/index.html
+++ b/phase4/templates/index.html
@@ -82,7 +82,7 @@
     function workflow() {
       httpGet();
       httpGet1();
-      // httpUpdateVal();
+      httpUpdateVal();
     }
 
     console.log("hit");
