added jsonify wrapper to routes

--- a/phase4/templates/index.html
+++ b/phase4/templates/index.html
@@ -30,8 +30,8 @@
         value = parseInt(xmlHttp.responseText.substring(7, xmlHttp.responseText.length-2));
         console.log(value);
         console.log(xmlHttp.responseText);
-        console.log(xmlHttp.responseText.substring(7, 8));
-        console.log(xmlHttp.responseText.substring(8, xmlHttp.responseText.length-2))
+        // console.log(xmlHttp.responseText.substring(7, 8));
+        // console.log(xmlHttp.response()})Text.substring(8, xmlHttp.responseText.length-2))
         // document.querySelector("#first-val-letter-rpm").innerHTML = xmlHttp.responseText.substring(7, 8);
         // document.querySelector("#other-val-letter-rpm").innerHTML = xmlHttp.responseText.substring(8, xmlHttp.responseText.length-2);
         if (value < 1000 ) {
